meteor/client/ui/SegmentStoryboard/SegmentStoryboard.scss
@import '../../styles/colorScheme';
@import '../../styles/variables';
@import '../../styles/itemTypeColors';

$part-left-right-padding: 0.3rem;

.segment-storyboard {
	> .segment-storyboard__part-list__container {
		position: relative;
		overflow: hidden;
		grid-column: timeline / end;
		grid-row: header / end;

		contain: content style;
		touch-action: pan-y;

		cursor: ew-resize;
		cursor: url(/images/cursor_zoom_area_move.png), ew-resize;
		cursor: url(/images/cursor_zoom_area_move.png) 15 8, ew-resize;
	}

	> .segment-storyboard__part-list__container {
		> .segment-storyboard__part-list {
			position: relative;
			display: flex;
			padding-left: 0;

			> .segment-storyboard__part-list.segment-storyboard__part-list--squished-parts {
				position: relative;
				display: block;
				padding-left: 0;
				margin: 0;
			}
		}

		> .segment-storyboard__history-shade {
			position: absolute;
			top: 0;
			left: 0;
			width: 100px;
			bottom: 0;
			background: linear-gradient(to right, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
			pointer-events: none;
		}

		> .segment-timeline__zoom-area {
			margin-left: 0;

			transition: 1s opacity, 0s visibility;

			&.hidden {
				opacity: 0;
				transition: 1s opacity, 0s visibility 1s;
				visibility: hidden;
			}
		}
	}

	> .segment-timeline__source-layers {
		grid-column: segment-group-controls / timeline;
		grid-row: main-view / zoom-area;
		margin: $segment-storyboard-thumbnail-height 0.3em 0;

		> .segment-timeline__output-group {
			> .segment-timeline__source-layer {
				text-align: right;
				line-height: 1.5em;
				height: 1.5em;
				min-height: 1.5em;
				letter-spacing: 0em;
				color: #888;
				font-weight: 300;
			}
		}
	}
}

.segment-storyboard__part {
	position: relative;
	flex: 0 0;
	min-width: $segment-storyboard-part-width;
	margin-top: 1em;
	padding: 1.3rem $part-left-right-padding 1.5rem;

	> .segment-storyboard__part__title {
		display: none;
		position: absolute;
		top: 1.3em;
		width: 100%;
	}

	> .segment-storyboard__part__next-line {
		position: absolute;
		top: 0;
		left: 0;
		bottom: 0;
		width: 0;
		border-left: 2px solid $part-start-color;
		z-index: 2;

		&--autonext {
			border-left: 1px solid $part-start-color;
		}

		&--live {
			border-left-color: $general-live-color;
		}

		&--next {
			border-left-color: $general-next-color;
		}

		&--opposite {
			left: auto;
			right: -2px;
		}
	}

	> .segment-storyboard__part__next-line-label {
		position: absolute;
		top: 0;
		left: 0;
		right: 0;
		text-transform: uppercase;
		font-weight: bold;
		line-height: 0.9em;
		white-space: nowrap;
		word-wrap: none;
		color: $part-start-color;
		padding: 0.1em 0.3em;
		z-index: 2;

		&.segment-storyboard__part__next-line-label--live {
			background: $general-live-color;
			color: #fff;
		}

		&.segment-storyboard__part__next-line-label--next {
			background: $general-next-color;
			color: #000;
		}

		&:not(.segment-storyboard__part__next-line-label--next):not(.segment-storyboard__part__next-line-label--live).segment-storyboard__part__next-line-label--autonext {
			font-weight: 400;
		}
	}

	> .segment-storyboard__identifier {
		position: absolute;
		bottom: 0;
		left: 0;
		z-index: -1;
		padding: 0 10px 0 10px;
		box-sizing: border-box;
		background-color: $part-identifier;
		border-radius: 0 10px 10px 0;
		color: $part-identifier-text;
	}

	> .segment-storyboard__part-timer {
		position: absolute;
		bottom: 0;
		right: $part-left-right-padding;
		text-align: right;
		z-index: 2;
		white-space: nowrap;
		background: $segment-background-color;
		color: #888;
		font-size: 0.9em;

		opacity: 1;
		visibility: visible;

		@keyframes segment-storyboard__part-timer--fadeIn {
			0% {
				opacity: 0;
			}
			100% {
				opacity: 1;
			}
		}

		&--live {
			font-size: 1.2em;
			line-height: 1em;
			font-weight: 500;
			color: $liveline-timecode-color;
			opacity: 1;

			> .overtime {
				color: $general-late-color;
			}
		}
	}

	> .segment-storyboard__part__transitions {
		position: absolute;
		top: 3.5rem;
		left: $part-left-right-padding;

		width: fit-content;

		.segment-storyboard__part__piece {
			border-radius: 0;
			cursor: default;
			width: fit-content;
		}
	}

	> .segment-storyboard__part__thumbnail.live-speak:hover,
	> .segment-storyboard__part__thumbnail.vt:hover {
		& + .segment-storyboard__part__transitions {
			display: none;
		}
	}

	--invalid-reason-color-transparent: transparent;
	--invalid-reason-color-opaque: #{$ui-dark-color};

	> .segment-storyboard__part__invalid-cover {
		position: absolute;
		top: 0;
		left: 1px;
		bottom: 0;
		right: 1px;
		z-index: 1;
		pointer-events: none;
		background-image: repeating-linear-gradient(
				45deg,
				var(--invalid-reason-color-transparent) 0%,
				var(--invalid-reason-color-transparent) 5px,
				var(--invalid-reason-color-opaque) 5px,
				var(--invalid-reason-color-opaque) 10px
			),
			repeating-linear-gradient(
				-45deg,
				var(--invalid-reason-color-transparent) 0%,
				var(--invalid-reason-color-transparent) 5px,
				var(--invalid-reason-color-opaque) 5px,
				var(--invalid-reason-color-opaque) 10px
			);
	}

	> .segment-storyboard__part__floated-cover {
		position: absolute;
		top: 0;
		left: 0;
		bottom: 0;
		right: 0;
		z-index: 1;
		pointer-events: none;
		background-image: repeating-linear-gradient(
			-45deg,
			transparent 0%,
			transparent 8px,
			darken($part-start-color, 50%) 8px,
			darken($part-start-color, 50%) 10px
		);
		backdrop-filter: saturate(0%) brightness(50%);
	}
}

.segment-storyboard
	> .segment-storyboard__part-list__container
	> .segment-storyboard__part-list
	> .segment-storyboard__part-list.segment-storyboard__part-list--squished-parts {
	> .segment-storyboard__part {
		max-width: $segment-storyboard-part-width;
		position: absolute;
		z-index: 1;

		$squished-shadow: 0 0 10px rgba(0, 0, 0, 1);
		transition: filter 0.2s 0s ease-out;

		&.background {
			filter: brightness(0.3);
		}

		> .segment-storyboard__identifier,
		> .segment-storyboard__part__thumbnail,
		> .segment-storyboard__part__secondary-pieces
			> .segment-storyboard__part__output-group
			> .segment-storyboard__part__source-layer
			> .segment-storyboard__part__piece {
			box-shadow: $squished-shadow;
		}

		> .segment-storyboard__part-timer {
			visibility: hidden;
			opacity: 0;
		}
	}

	&.hover {
		> .segment-storyboard__part {
			filter: brightness(0.3);

			&.hover {
				filter: brightness(1);
				transition: filter 0s;
				z-index: 3;

				> .segment-storyboard__part-timer {
					visibility: visible;
					opacity: 1;
				}
			}
		}
	}
}

